# add-gismo-simple-test

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  build-simple-tensor-product-bspline.cpp
include/simple/: simple.hpp
test/: CMakeLists.txt  run_tests.cpp  test_simple.cc
